--- a/app/src/main/res/layout/activity_altas.xml
+++ b/app/src/main/res/layout/activity_altas.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#81009688">
 
     <ImageView
         android:id="@+id/imageView3"
@@ -105,16 +106,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="488dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="28dp"
         android:text="Return"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnClean"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
 
     <Button
         android:id="@+id/btnClean"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="80dp"
         android:text="Clean"
         app:layout_constraintStart_toEndOf="@+id/btnAdd"
